[package]
name = "tcs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
axum-client-ip = "0.4.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version="1", features = ["derive"] }